src/contrib/SignalSource/NIDAQ/nidaq/nidaq.h

typedef char i8;
typedef short i16;
typedef unsigned short u16;
typedef long i32;
typedef unsigned long u32;
typedef double f64;
extern i16 WINAPI AI_Change_Parameter (
	i16        slot,
	i16        channel,
	u32        paramID,
	u32        paramValue);
extern i16 WINAPI AI_Check (
	i16        slot,
	i16        FAR * status,
	i16        FAR * value);
extern i16 WINAPI AI_Clear (
	i16        slot);
extern i16 WINAPI AI_Configure (
	i16        slot,
	i16        chan,
	i16        inputMode,
	i16        inputRange,
	i16        polarity,
	i16        driveAIS);
extern i16 WINAPI AI_Mux_Config (
	i16        slot,
	i16        numMuxBrds);
extern i16 WINAPI AI_Read (
	i16        slot,
	i16        chan,
	i16        gain,
	i16        FAR * value);
extern i16 WINAPI AI_Read32 (
	i16        slot,
	i16        chan,
	i16        gain,
	i32        FAR * value);
extern i16 WINAPI AI_Setup (
	i16        slot,
	i16        chan,
	i16        gain);
extern i16 WINAPI AI_VRead (
	i16        slot,
	i16        chan,
	i16        gain,
	f64        FAR * volts);
extern i16 WINAPI AI_VScale (
	i16        slot,
	i16        chan,
	i16        gain,
	f64        gainAdjust,
	f64        offset,
	i16        reading,
	f64        FAR * voltage);
extern i16 WINAPI Align_DMA_Buffer (
	i16        slot,
	i16        resource,
	i16        FAR * buffer,
	u32        cnt,
	u32        bufSize,
	u32        FAR * alignIndex);
extern i16 WINAPI AO_Calibrate (
	i16        board,
	i16        operation,
	i16        EEPROMloc);
extern i16 WINAPI AO_Configure (
	i16        slot,
	i16        chan,
	i16        outputPolarity,
	i16        IntOrExtRef,
	f64        refVoltage,
	i16        updateMode);
extern i16 WINAPI AO_Change_Parameter (
	i16        slot,
	i16        channel,
	u32        paramID,
	u32        paramValue);
extern i16 WINAPI AO_Update (
	i16        slot);
extern i16 WINAPI AO_VWrite (
	i16        slot,
	i16        chan,
	f64        voltage);
extern i16 WINAPI AO_Write (
	i16        slot,
	i16        chan,
	i16        value);
extern i16 WINAPI Calibrate_E_Series (
	i16        deviceNumber,
	u32        calOp,
	u32        setOfCalConst,
	f64        calRefVolts);
extern i16 WINAPI Calibrate_59xx (
	i16        deviceNumber,
	u32        operation,
	f64        refVoltage);
extern i16 WINAPI Calibrate_DSA (
	i16        deviceNumber,
	u32        operation,
	f64        refVoltage);
extern i16 WINAPI Config_Alarm_Deadband (
	i16        slot,
	i16        mode,
	i8         FAR * chanStr,
	f64        trigLvl,
	f64        deadbandWidth,
	HWND       handle,
	i16        alarmOnMsg,
	i16        alarmOffMsg,
	u32        callbackAddr);
extern i16 WINAPI Config_ATrig_Event_Message (
	i16        slot,
	i16        mode,
	i8         FAR * chanStr,
	f64        trigLvl,
	f64        winSize,
	i16        trigSlope,
	u32        skipCnt,
	u32        preTrigScans,
	u32        postTrigScans,
	HWND       handle,
	i16        msg,
	u32        callBackAddr);
extern i16 WINAPI Config_DAQ_Event_Message (
	i16        slot,
	i16        mode,
	i8         FAR * chanStr,
	i16        DAQEvent,
	i32        trigVal0,
	i32        trigVal1,
	u32        skipCnt,
	u32        preTrigScans,
	u32        postTrigScans,
	HWND       handle,
	i16        msg,
	u32        callBackAddr);
extern i16 WINAPI Configure_HW_Analog_Trigger (
	i16        deviceNumber,
	u32        onOrOff,
	i32        lowValue,
	i32        highValue,
	u32        mode,
	u32        trigSource);
extern i16 WINAPI CTR_Config (
	i16        slot,
	i16        ctr,
	i16        edgeMode,
	i16        gateMode,
	i16        outType,
	i16        outPolarity);
extern i16 WINAPI CTR_EvCount (
	i16        slot,
	i16        ctr,
	i16        timebase,
	i16        cont);
extern i16 WINAPI CTR_EvRead (
	i16        slot,
	i16        ctr,
	i16        FAR * overflow,
	u16        FAR * counts);
extern i16 WINAPI CTR_FOUT_Config (
	i16        slot,
	i16        FOUT,
	i16        mode,
	i16        timebase,
	i16        division);
extern i16 WINAPI CTR_Period (
	i16        slot,
	i16        ctr,
	i16        timebase);
extern i16 WINAPI CTR_Pulse (
	i16        slot,
	i16        ctr,
	i16        timebase,
	u16        delay,
	u16        pulseWidth);
extern i16 WINAPI CTR_Rate (
	f64        freq,
	f64        duty,
	i16        FAR * timebase,
	u16        FAR * period1,
	u16        FAR * period2);
extern i16 WINAPI CTR_Reset (
	i16        slot,
	i16        ctr,
	i16        outState);
extern i16 WINAPI CTR_Restart (
	i16        slot,
	i16        ctr);
extern i16 WINAPI CTR_Simul_Op (
	i16        slot,
	i16        numCtrs,
	i16        FAR * ctrList,
	i16        mode);
extern i16 WINAPI CTR_Square (
	i16        slot,
	i16        ctr,
	i16        timebase,
	u16        period1,
	u16        period2);
extern i16 WINAPI CTR_State (
	i16        slot,
	i16        ctr,
	i16        FAR * outState);
extern i16 WINAPI CTR_Stop (
	i16        slot,
	i16        ctr);
extern i16 WINAPI DAQ_Check (
	i16        slot,
	i16        FAR * progress,
	u32        FAR * retrieved);
extern i16 WINAPI DAQ_Clear (
	i16        slot);
extern i16 WINAPI DAQ_Config (
	i16        slot,
	i16        startTrig,
	i16        extConv);
extern i16 WINAPI DAQ_DB_Config (
	i16        slot,
	i16        dbMode);
extern i16 WINAPI DAQ_DB_HalfReady (
	i16        slot,
	i16        FAR * halfReady,
	i16        FAR * status);
extern i16 WINAPI DAQ_DB_Transfer (
	i16        slot,
	i16        FAR * hbuffer,
	u32        FAR * ptsTfr,
	i16        FAR * status);
extern i16 WINAPI DAQ_Monitor (
	i16        slot,
	i16        chan,
	i16        seq,
	u32        monitorCnt,
	i16        FAR * monitorBuf,
	u32        FAR * newestIndex,
	i16        FAR * status);
extern i16 WINAPI DAQ_Op (
	i16        slot,
	i16        chan,
	i16        gain,
	i16        FAR * buffer,
	u32        cnt,
	f64        sampleRate);
extern i16 WINAPI DAQ_Rate (
	f64        rate,
	i16        units,
	i16        FAR * timebase,
	u16        FAR * sampleInt);
extern i16 WINAPI DAQ_Start (
	i16        slot,
	i16        chan,
	i16        gain,
	i16        FAR * buffer,
	u32        cnt,
	i16        timebase,
	u16        sampInt);
extern i16 WINAPI DAQ_StopTrigger_Config (
	i16        slot,
	i16        preTrig,
	u32        preTrigCnt);
extern i16 WINAPI DAQ_to_Disk (
	i16        slot,
	i16        chan,
	i16        gain,
	i8         FAR * fileName,
	u32        cnt,
	f64        sampleRate,
	i16        concat);
extern i16 WINAPI DAQ_VScale (
	i16        slot,
	i16        chan,
	i16        gain,
	f64        gainAdjust,
	f64        offset,
	u32        cnt,
	i16        FAR * binArray,
	f64        FAR * voltArray);
extern i16 WINAPI DIG_Block_Check (
	i16        slot,
	i16        grp,
	u32        FAR * remaining);
extern i16 WINAPI DIG_Block_Clear (
	i16        slot,
	i16        grp);
extern i16 WINAPI DIG_Block_In (
	i16        slot,
	i16        grp,
	i16        FAR * buffer,
	u32        cnt);
extern i16 WINAPI DIG_Block_Out (
	i16        slot,
	i16        grp,
	i16        FAR * buffer,
	u32        cnt);
extern i16 WINAPI DIG_Block_PG_Config (
	i16        slot,
	i16        grp,
	i16        PGmode,
	i16        reqSource,
	i16        timebase,
	u16        interval,
	i16        externalGate);
extern i16 WINAPI DIG_DB_Config (
	i16        slot,
	i16        grp,
	i16        DBMode,
	i16        oldDataStop,
	i16        partialTransfer);
extern i16 WINAPI DIG_DB_HalfReady (
	i16        slot,
	i16        grp,
	i16        FAR * halfReady);
extern i16 WINAPI DIG_DB_Transfer (
	i16        slot,
	i16        grp,
	i16        FAR * halfBuffer,
	u32        ptsTfr);
extern i16 WINAPI DIG_Grp_Config (
	i16        slot,
	i16        grp,
	i16        grpsize,
	i16        port,
	i16        direction);
extern i16 WINAPI DIG_Grp_Mode (
	i16        slot,
	i16        grp,
	i16        sigType,
	i16        edge,
	i16        reqpol,
	i16        ackpol,
	i16        settleTime);
extern i16 WINAPI DIG_Grp_Status (
	i16        slot,
	i16        grp,
	i16        FAR * status);
extern i16 WINAPI DIG_In_Grp (
	i16        slot,
	i16        grp,
	i16        FAR * grp_pat);
extern i16 WINAPI DIG_In_Line (
	i16        slot,
	i16        port,
	i16        linenum,
	i16        FAR * state);