src/contrib/SignalSource/NIDAQ/nidaq/nidaq.pas


function AI_Change_Parameter (
	slot:                 i16;
	channel:              i16;
	paramID:              u32;
	paramValue:           u32
	):nidaqStatus; stdcall; external nidaqdll;
function AI_Check (
	slot:                 i16;
	status:               pi16;
	value:                pi16
	):nidaqStatus; stdcall; external nidaqdll;
function AI_Clear (
	slot:                 i16
	):nidaqStatus; stdcall; external nidaqdll;
function AI_Configure (
	slot:                 i16;
	chan:                 i16;
	inputMode:            i16;
	inputRange:           i16;
	polarity:             i16;
	driveAIS:             i16
	):nidaqStatus; stdcall; external nidaqdll;
function AI_Mux_Config (
	slot:                 i16;
	numMuxBrds:           i16
	):nidaqStatus; stdcall; external nidaqdll;
function AI_Read (
	slot:                 i16;
	chan:                 i16;
	gain:                 i16;
	value:                pi16
	):nidaqStatus; stdcall; external nidaqdll;
function AI_Read32 (
	slot:                 i16;
	chan:                 i16;
	gain:                 i16;
	value:                pi32
	):nidaqStatus; stdcall; external nidaqdll;
function AI_Setup (
	slot:                 i16;
	chan:                 i16;
	gain:                 i16
	):nidaqStatus; stdcall; external nidaqdll;
function AI_VRead (
	slot:                 i16;
	chan:                 i16;
	gain:                 i16;
	volts:                pf64
	):nidaqStatus; stdcall; external nidaqdll;
function AI_VScale (
	slot:                 i16;
	chan:                 i16;
	gain:                 i16;
	gainAdjust:           f64;
	offset:               f64;
	reading:              i16;
	voltage:              pf64
	):nidaqStatus; stdcall; external nidaqdll;
function Align_DMA_Buffer (
	slot:                 i16;
	resource:             i16;
	buffer:               pi16;
	cnt:                  u32;
	bufSize:              u32;
	alignIndex:           pu32
	):nidaqStatus; stdcall; external nidaqdll;
function AO_Calibrate (
	board:                i16;
	operation:            i16;
	EEPROMloc:            i16
	):nidaqStatus; stdcall; external nidaqdll;
function AO_Configure (
	slot:                 i16;
	chan:                 i16;
	outputPolarity:       i16;
	IntOrExtRef:          i16;
	refVoltage:           f64;
	updateMode:           i16
	):nidaqStatus; stdcall; external nidaqdll;
function AO_Change_Parameter (
	slot:                 i16;
	channel:              i16;
	paramID:              u32;
	paramValue:           u32
	):nidaqStatus; stdcall; external nidaqdll;
function AO_Update (
	slot:                 i16
	):nidaqStatus; stdcall; external nidaqdll;
function AO_VWrite (
	slot:                 i16;
	chan:                 i16;
	voltage:              f64
	):nidaqStatus; stdcall; external nidaqdll;
function AO_Write (
	slot:                 i16;
	chan:                 i16;
	value:                i16
	):nidaqStatus; stdcall; external nidaqdll;
function Calibrate_E_Series (
	deviceNumber:         i16;
	calOp:                u32;
	setOfCalConst:        u32;
	calRefVolts:          f64
	):nidaqStatus; stdcall; external nidaqdll;
function Calibrate_59xx (
	deviceNumber:         i16;
	operation:            u32;
	refVoltage:           f64
	):nidaqStatus; stdcall; external nidaqdll;
function Calibrate_DSA (
	deviceNumber:         i16;
	operation:            u32;
	refVoltage:           f64
	):nidaqStatus; stdcall; external nidaqdll;
function Config_Alarm_Deadband (
	slot:                 i16;
	mode:                 i16;
	chanStr:              pi8;
	trigLvl:              f64;
	deadbandWidth:        f64;
	handle:               HWND;
	alarmOnMsg:           i16;
	alarmOffMsg:          i16;
	callbackAddr:         u32
	):nidaqStatus; stdcall; external nidaqdll;
function Config_ATrig_Event_Message (
	slot:                 i16;
	mode:                 i16;
	chanStr:              pi8;
	trigLvl:              f64;
	winSize:              f64;
	trigSlope:            i16;
	skipCnt:              u32;
	preTrigScans:         u32;
	postTrigScans:        u32;
	handle:               HWND;
	msg:                  i16;
	callBackAddr:         u32
	):nidaqStatus; stdcall; external nidaqdll;
function Config_DAQ_Event_Message (
	slot:                 i16;
	mode:                 i16;
	chanStr:              pi8;
	DAQEvent:             i16;
	trigVal0:             i32;
	trigVal1:             i32;
	skipCnt:              u32;
	preTrigScans:         u32;
	postTrigScans:        u32;
	handle:               HWND;
	msg:                  i16;
	callBackAddr:         u32
	):nidaqStatus; stdcall; external nidaqdll;
function Configure_HW_Analog_Trigger (
	deviceNumber:         i16;
	onOrOff:              u32;
	lowValue:             i32;
	highValue:            i32;
	mode:                 u32;
	trigSource:           u32
	):nidaqStatus; stdcall; external nidaqdll;
function CTR_Config (
	slot:                 i16;
	ctr:                  i16;
	edgeMode:             i16;
	gateMode:             i16;
	outType:              i16;
	outPolarity:          i16
	):nidaqStatus; stdcall; external nidaqdll;
function CTR_EvCount (
	slot:                 i16;
	ctr:                  i16;
	timebase:             i16;
	cont:                 i16
	):nidaqStatus; stdcall; external nidaqdll;
function CTR_EvRead (
	slot:                 i16;
	ctr:                  i16;
	overflow:             pi16;
	counts:               pu16
	):nidaqStatus; stdcall; external nidaqdll;
function CTR_FOUT_Config (
	slot:                 i16;
	FOUT:                 i16;
	mode:                 i16;
	timebase:             i16;
	division:             i16
	):nidaqStatus; stdcall; external nidaqdll;
function CTR_Period (
	slot:                 i16;
	ctr:                  i16;
	timebase:             i16
	):nidaqStatus; stdcall; external nidaqdll;
function CTR_Pulse (
	slot:                 i16;
	ctr:                  i16;
	timebase:             i16;
	delay:                u16;
	pulseWidth:           u16
	):nidaqStatus; stdcall; external nidaqdll;
function CTR_Rate (
	freq:                 f64;
	duty:                 f64;
	timebase:             pi16;
	period1:              pu16;
	period2:              pu16
	):nidaqStatus; stdcall; external nidaqdll;
function CTR_Reset (
	slot:                 i16;
	ctr:                  i16;
	outState:             i16
	):nidaqStatus; stdcall; external nidaqdll;
function CTR_Restart (
	slot:                 i16;
	ctr:                  i16
	):nidaqStatus; stdcall; external nidaqdll;
function CTR_Simul_Op (
	slot:                 i16;
	numCtrs:              i16;
	ctrList:              pi16;
	mode:                 i16
	):nidaqStatus; stdcall; external nidaqdll;
function CTR_Square (
	slot:                 i16;
	ctr:                  i16;
	timebase:             i16;
	period1:              u16;
	period2:              u16
	):nidaqStatus; stdcall; external nidaqdll;
function CTR_State (
	slot:                 i16;
	ctr:                  i16;
	outState:             pi16
	):nidaqStatus; stdcall; external nidaqdll;
function CTR_Stop (
	slot:                 i16;
	ctr:                  i16
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_Check (
	slot:                 i16;
	progress:             pi16;
	retrieved:            pu32
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_Clear (
	slot:                 i16
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_Config (
	slot:                 i16;
	startTrig:            i16;
	extConv:              i16
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_DB_Config (
	slot:                 i16;
	dbMode:               i16
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_DB_HalfReady (
	slot:                 i16;
	halfReady:            pi16;
	status:               pi16
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_DB_Transfer (
	slot:                 i16;
	hbuffer:              pi16;
	ptsTfr:               pu32;
	status:               pi16
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_Monitor (
	slot:                 i16;
	chan:                 i16;
	seq:                  i16;
	monitorCnt:           u32;
	monitorBuf:           pi16;
	newestIndex:          pu32;
	status:               pi16
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_Op (
	slot:                 i16;
	chan:                 i16;
	gain:                 i16;
	buffer:               pi16;
	cnt:                  u32;
	sampleRate:           f64
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_Rate (
	rate:                 f64;
	units:                i16;
	timebase:             pi16;
	sampleInt:            pu16
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_Start (
	slot:                 i16;
	chan:                 i16;
	gain:                 i16;
	buffer:               pi16;
	cnt:                  u32;
	timebase:             i16;
	sampInt:              u16
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_StopTrigger_Config (
	slot:                 i16;
	preTrig:              i16;
	preTrigCnt:           u32
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_to_Disk (
	slot:                 i16;
	chan:                 i16;
	gain:                 i16;
	fileName:             pi8;
	cnt:                  u32;
	sampleRate:           f64;
	concat:               i16
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_VScale (
	slot:                 i16;
	chan:                 i16;
	gain:                 i16;
	gainAdjust:           f64;
	offset:               f64;
	cnt:                  u32;
	binArray:             pi16;
	voltArray:            pf64
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Block_Check (
	slot:                 i16;
	grp:                  i16;
	remaining:            pu32
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Block_Clear (
	slot:                 i16;
	grp:                  i16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Block_In (
	slot:                 i16;
	grp:                  i16;
	buffer:               pi16;
	cnt:                  u32
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Block_Out (
	slot:                 i16;
	grp:                  i16;
	buffer:               pi16;
	cnt:                  u32
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Block_PG_Config (
	slot:                 i16;
	grp:                  i16;
	PGmode:               i16;
	reqSource:            i16;
	timebase:             i16;
	interval:             u16;
	externalGate:         i16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_DB_Config (
	slot:                 i16;
	grp:                  i16;
	DBMode:               i16;
	oldDataStop:          i16;
	partialTransfer:      i16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_DB_HalfReady (
	slot:                 i16;
	grp:                  i16;
	halfReady:            pi16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_DB_Transfer (
	slot:                 i16;
	grp:                  i16;
	halfBuffer:           pi16;
	ptsTfr:               u32
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Grp_Config (
	slot:                 i16;
	grp:                  i16;
	grpsize:              i16;
	port:                 i16;
	direction:            i16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Grp_Mode (
	slot:                 i16;
	grp:                  i16;
	sigType:              i16;
	edge:                 i16;
	reqpol:               i16;
	ackpol:               i16;
	settleTime:           i16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Grp_Status (
	slot:                 i16;
	grp:                  i16;
	status:               pi16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_In_Grp (
	slot:                 i16;
	grp:                  i16;
	grp_pat:              pi16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_In_Line (
	slot:                 i16;
	port:                 i16;
	linenum:              i16;
